--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,6 @@
         app:layout_anchorGravity="top|end"
         app:srcCompat="@drawable/ic_add"
         app:tint="@android:color/white"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="70dp"/>
+        android:layout_marginEnd="16dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
