--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_list_black_24dp"
         android:title="@string/title_recipe" />
 
+    <item
+        android:id="@+id/navigation_feedback"
+        android:icon="@drawable/ic_info"
+        android:title="@string/title_feedback" />
+
 </menu>
